crates/soul-attributes/tests/ui/non_string_value.rs
use soul_attributes::soul;

#[soul(id = "interaction.checkout.create-order", role = 42)]
fn annotated() {}

fn main() {}
